working on proect

--- a/shop-details.html
+++ b/shop-details.html
@@ -31,7 +31,7 @@
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
-        <title>Hilo - Organic Food Shop HTML Template</title>
+        <title>Devine Treasure Bakery</title>
     </head>
     <body>
         <!-- Pre Loader -->
@@ -39,7 +39,7 @@
             <div class="d-table">
                 <div class="d-table-cell">
                     <img src="assets/images/preloder-img.png" alt="Images">
-                    <h2>Hilo</h2>
+                    <h2>Devine</h2>
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
             <!-- Menu For Mobile Device -->
             <div class="mobile-nav">
                 <a href="index.html" class="logo">
-                    <img src="assets/images/logos/logo-1.png" alt="Logo">
+                    <img src="assets/images/logos/logoBake.png" alt="Logo" height="70px">
                 </a>
             </div>
 
@@ -58,38 +58,20 @@
             <div class="main-nav nav-three">
                 <div class="container">
                     <nav class="navbar navbar-expand-md navbar-light ">
-                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/images/logos/logo-2.png" class="logo-one" alt="Logo">
-                            <img src="assets/images/logos/logo-1.png" class="logo-two" alt="Logo">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="assets/images/logos/logoBake.png" class="logo-one" alt="Logo" height="70px">
+                            <img src="assets/images/logos/logoBake.png" class="logo-two" alt="Logo" height="70px">
                         </a>
 
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="index.html" class="nav-link">
                                         Home 
-                                        <i class='bx bx-chevron-down'></i>
                                     </a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item">
-                                            <a href="index.html" class="nav-link">
-                                                Home One  
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="index-2.html" class="nav-link">
-                                                Home Two
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="index-3.html" class="nav-link">
-                                                Home Three
-                                            </a>
-                                        </li>
-                                    </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link active">
+                                    <a href="#" class="nav-link">
                                         Pages 
                                         <i class='bx bx-chevron-down'></i>
                                     </a>
@@ -101,7 +83,7 @@
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="#" class="nav-link active">
+                                            <a href="#" class="nav-link">
                                                 Shop 
                                                 <i class='bx bx-chevron-down'></i>
                                             </a>
@@ -112,28 +94,8 @@
                                                     </a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a href="shop-details-left-sidebar.html" class="nav-link">
-                                                        Shop Details Left Sidebar
-                                                    </a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="shop-details-right-sidebar.html" class="nav-link">
-                                                        Shop Details Right Sidebar 
-                                                    </a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="tracking-order.html" class="nav-link">
-                                                        Tracking Order 
-                                                    </a>
-                                                </li>
-                                                <li class="nav-item">
                                                     <a href="customer-services.html" class="nav-link">
                                                         Customer Services  
-                                                    </a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="compare.html" class="nav-link">
-                                                        Compare  
                                                     </a>
                                                 </li>
                                                 <li class="nav-item">
@@ -162,18 +124,6 @@
                                         <li class="nav-item">
                                             <a href="faq.html" class="nav-link">
                                                 FAQ
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="team.html" class="nav-link">
-                                                Team
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="testimonials.html" class="nav-link">
-                                                Testimonials
                                             </a>
                                         </li>
 
@@ -224,12 +174,7 @@
                                                 Search Page
                                             </a>
                                         </li>
-                                        
-                                        <li class="nav-item">
-                                            <a href="coming-soon.html" class="nav-link">
-                                                Coming Soon
-                                            </a>
-                                        </li>
+                                       
                                     </ul>
                                 </li>
 
@@ -252,11 +197,6 @@
                                         <li class="nav-item">
                                             <a href="shop-grid.html" class="nav-link">
                                                 Shop Grid 
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="shop-full-width-sidebar.html" class="nav-link">
-                                                Shop Full Width Sidebar
                                             </a>
                                         </li>
                                     </ul>
@@ -303,7 +243,6 @@
                                         <option>简体中文</option>
                                     </select>	
                                 </div>
-
                                 <div class="side-nav-cart">
                                     <a href="#"><i class='bx bx-cart'></i></a>
                                     <span>1</span>
@@ -328,7 +267,7 @@
                         <div class="side-nav-inner">
                             <div class="side-nav justify-content-center align-items-center">
                                 <div class="side-nav-item">
-                                     <div class="language-on-list">
+                                    <div class="language-on-list">
                                         <select class="language-list-item">
                                             <option>English</option>
                                             <option>العربيّة</option>
@@ -745,8 +684,8 @@
                             <div class="footer-widget footer-widget-color-2">
                                 <div class="footer-logo">
                                     <a href="index.html">
-                                        <img src="assets/images/logos/footer-logo.png" class="footer-logo1" alt="Images">
-                                        <img src="assets/images/logos/logo-1.png" class="footer-logo2" alt="Images">
+                                        <img src="assets/images/logos/logoBake.png" class="footer-logo1" alt="Images">
+                                        <img src="assets/images/logos/logoBake.png" class="footer-logo2" alt="Images">
                                     </a>
                                 </div>
                                 <p>
@@ -779,18 +718,8 @@
                                         </a>
                                     </li> 
                                     <li>
-                                        <a href="tracking-order.html" target="_blank">
-                                            Tracking Order 
-                                        </a>
-                                    </li> 
-                                    <li>
                                         <a href="customer-services.html" target="_blank">
                                             Customer Services  
-                                        </a>
-                                    </li> 
-                                    <li>
-                                        <a href="compare.html" target="_blank">
-                                            Compare    
                                         </a>
                                     </li> 
                                     <li>
@@ -831,16 +760,6 @@
                                             Shop Details    
                                         </a>
                                     </li> 
-                                    <li>
-                                        <a href="testimonials.html" target="_blank">
-                                            Testimonials      
-                                        </a>
-                                    </li> 
-                                    <li>
-                                        <a href="team.html" target="_blank">
-                                            Team      
-                                        </a>
-                                    </li> 
                                 </ul>
                             </div>
                         </div>
@@ -878,15 +797,14 @@
                 <div class="copy-right-area-three">
                     <div class="copy-right-text">
                         <p>
-                            Copyright @<script>document.write(new Date().getFullYear())</script> Hilo. All Rights Reserved by 
-                            <a href="https://hibootstrap.com/" target="_blank">HiBootstrap</a> 
+                            Copyright @<script>document.write(new Date().getFullYear())</script> Devine Bakery. All Rights Reserved by 
+                            <a href="https://aniemmanuelrapoo.netlify.app/" target="_blank">Rapoo</a> 
                         </p>
                     </div>
                 </div>
             </div>
         </footer>
         <!-- Footer Area End -->
-
 
        <!-- Jquery Min JS -->
         <script src="assets/js/jquery.min.js"></script>
