updating nav link

--- a/blog-1.html
+++ b/blog-1.html
@@ -89,7 +89,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
@@ -209,7 +209,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li class="nav-item">
-                                        <a href="blog-1.html" class="nav-link">
+                                        <a href="blog-1.html" class="nav-link active">
                                             Blog Style One 
                                         </a>
                                     </li>
