--- a/forget-password.html
+++ b/forget-password.html
@@ -89,7 +89,7 @@
                                             </a>
                                             <ul class="dropdown-menu">
                                                 <li class="nav-item">
-                                                    <a href="shop-details.html" class="nav-link active">
+                                                    <a href="shop-details.html" class="nav-link">
                                                         Shop Details
                                                     </a>
                                                 </li>
@@ -144,7 +144,7 @@
                                                     </a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a href="forget-password.html" class="nav-link">
+                                                    <a href="forget-password.html" class="nav-link active">
                                                         Forget Password
                                                     </a>
                                                 </li>
@@ -473,7 +473,7 @@
             </div>
         </footer>
         <!-- Footer Area End -->
-        
+
 
        <!-- Jquery Min JS -->
         <script src="assets/js/jquery.min.js"></script>
