--- a/log-in.html
+++ b/log-in.html
@@ -89,7 +89,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
@@ -134,7 +134,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="log-in.html" class="nav-link">
+                                                <a href="log-in.html" class="nav-link active">
                                                     Log In
                                                 </a>
                                             </li>
