--- a/register.html
+++ b/register.html
@@ -89,7 +89,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
@@ -139,7 +139,7 @@
                                                 </a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="register.html" class="nav-link">
+                                                <a href="register.html" class="nav-link active">
                                                     Registration
                                                 </a>
                                             </li>
