--- a/shop-left-sidebar.html
+++ b/shop-left-sidebar.html
@@ -89,7 +89,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
@@ -185,7 +185,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li class="nav-item">
-                                        <a href="shop-left-sidebar.html" class="nav-link">
+                                        <a href="shop-left-sidebar.html" class="nav-link active">
                                             Shop Left Sidebar 
                                         </a>
                                     </li>
