--- a/shop-right-sidebar.html
+++ b/shop-right-sidebar.html
@@ -89,7 +89,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
@@ -190,7 +190,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="shop-right-sidebar.html" class="nav-link">
+                                        <a href="shop-right-sidebar.html" class="nav-link active">
                                             Shop Right Sidebar 
                                         </a>
                                     </li>
