--- a/404.html
+++ b/404.html
@@ -89,7 +89,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
@@ -164,7 +164,7 @@
                                     </li>
 
                                     <li class="nav-item">
-                                        <a href="404.html" class="nav-link">
+                                        <a href="404.html" class="nav-link active">
                                             404 page
                                         </a>
                                     </li>
