--- a/blog-2.html
+++ b/blog-2.html
@@ -89,7 +89,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
@@ -214,7 +214,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="blog-2.html" class="nav-link">
+                                        <a href="blog-2.html" class="nav-link active">
                                             Blog Style Two 
                                         </a>
                                     </li>
