--- a/cart.html
+++ b/cart.html
@@ -89,7 +89,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
@@ -99,7 +99,7 @@
                                                 </a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="cart.html" class="nav-link">
+                                                <a href="cart.html" class="nav-link active">
                                                     Cart  
                                                 </a>
                                             </li>
