--- a/checkout.html
+++ b/checkout.html
@@ -89,7 +89,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
@@ -104,7 +104,7 @@
                                                 </a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="checkout.html" class="nav-link">
+                                                <a href="checkout.html" class="nav-link active">
                                                     Checkout  
                                                 </a>
                                             </li>
