--- a/customer-services.html
+++ b/customer-services.html
@@ -89,12 +89,12 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="customer-services.html" class="nav-link">
+                                                <a href="customer-services.html" class="nav-link active">
                                                     Customer Services  
                                                 </a>
                                             </li>
