--- a/faq.html
+++ b/faq.html
@@ -89,7 +89,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
@@ -122,7 +122,7 @@
                                     </li>
                                     
                                     <li class="nav-item">
-                                        <a href="faq.html" class="nav-link">
+                                        <a href="faq.html" class="nav-link active">
                                             FAQ
                                         </a>
                                     </li>
