--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav m-auto">
                             <li class="nav-item">
-                                <a href="index.html" class="nav-link">
+                                <a href="index.html" class="nav-link active">
                                     Home 
                                 </a>
                             </li>
@@ -89,7 +89,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
