--- a/my-account.html
+++ b/my-account.html
@@ -89,7 +89,7 @@
                                             </a>
                                             <ul class="dropdown-menu">
                                                 <li class="nav-item">
-                                                    <a href="shop-details.html" class="nav-link active">
+                                                    <a href="shop-details.html" class="nav-link">
                                                         Shop Details
                                                     </a>
                                                 </li>
@@ -114,7 +114,7 @@
                                                     </a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a href="my-account.html" class="nav-link">
+                                                    <a href="my-account.html" class="nav-link active">
                                                         My Account  
                                                     </a>
                                                 </li>
