--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -89,7 +89,7 @@
                                             </a>
                                             <ul class="dropdown-menu">
                                                 <li class="nav-item">
-                                                    <a href="shop-details.html" class="nav-link active">
+                                                    <a href="shop-details.html" class="nav-link">
                                                         Shop Details
                                                     </a>
                                                 </li>
@@ -158,7 +158,7 @@
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="privacy-policy.html" class="nav-link">
+                                            <a href="privacy-policy.html" class="nav-link active">
                                                 Privacy Policy
                                             </a>
                                         </li>
