--- a/search-page.html
+++ b/search-page.html
@@ -89,7 +89,7 @@
                                             </a>
                                             <ul class="dropdown-menu">
                                                 <li class="nav-item">
-                                                    <a href="shop-details.html" class="nav-link active">
+                                                    <a href="shop-details.html" class="nav-link">
                                                         Shop Details
                                                     </a>
                                                 </li>
@@ -170,7 +170,7 @@
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="search-page.html" class="nav-link">
+                                            <a href="search-page.html" class="nav-link active">
                                                 Search Page
                                             </a>
                                         </li>
