--- a/shop-grid.html
+++ b/shop-grid.html
@@ -89,7 +89,7 @@
                                             </a>
                                             <ul class="dropdown-menu">
                                                 <li class="nav-item">
-                                                    <a href="shop-details.html" class="nav-link active">
+                                                    <a href="shop-details.html" class="nav-link">
                                                         Shop Details
                                                     </a>
                                                 </li>
@@ -195,7 +195,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="shop-grid.html" class="nav-link">
+                                            <a href="shop-grid.html" class="nav-link active">
                                                 Shop Grid 
                                             </a>
                                         </li>
