--- a/terms-condition.html
+++ b/terms-condition.html
@@ -89,7 +89,7 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="nav-item">
-                                                <a href="shop-details.html" class="nav-link active">
+                                                <a href="shop-details.html" class="nav-link">
                                                     Shop Details
                                                 </a>
                                             </li>
@@ -152,7 +152,7 @@
                                     </li>
 
                                     <li class="nav-item">
-                                        <a href="terms-condition.html" class="nav-link">
+                                        <a href="terms-condition.html" class="nav-link active">
                                             Terms & Conditions
                                         </a>
                                     </li>
