--- a/wishlist.html
+++ b/wishlist.html
@@ -89,7 +89,7 @@
                                             </a>
                                             <ul class="dropdown-menu">
                                                 <li class="nav-item">
-                                                    <a href="shop-details.html" class="nav-link active">
+                                                    <a href="shop-details.html" class="nav-link">
                                                         Shop Details
                                                     </a>
                                                 </li>
@@ -109,7 +109,7 @@
                                                     </a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a href="wishlist.html" class="nav-link">
+                                                    <a href="wishlist.html" class="nav-link active">
                                                         Wishlist  
                                                     </a>
                                                 </li>
