--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                             <span><b>Get 35% Discount,</b> Every Product </span>
                             <h2>Quality Is the First Not Quantity</h2>
                             <p>Lorem ipsum dolor sit amet, consetetur sadipscins elitr, seddiams nonumy eirmod.</p>
-                            <a href="#" class="default-btn btn-bg-three border-radius-5">Shop Now</a>
+                            <a href="shop-grid.html" class="default-btn btn-bg-three border-radius-5">Shop Now</a>
                         </div>
                     </div>
 
@@ -351,7 +351,7 @@
                                     <div class="line"></div>
                                     <span>Get 35% Discount</span>
                                     <h3>Bready Collection</h3>
-                                    <a href="#" class="shop-btn">Shop It Now</a>
+                                    <a href="shop-grid.html" class="shop-btn">Shop It Now</a>
                                     <img src="assets/images/offer-img/blog-6.png" alt="Images">
                                 </div>
                             </div>
@@ -360,7 +360,7 @@
                                 <div class="offer-style-item-2">
                                     <div class="line"></div>
                                     <h3>Donut Collection</h3>
-                                    <a href="#" class="shop-btn">Shop Now</a>
+                                    <a href="shop-grid.html" class="shop-btn">Shop Now</a>
                                     <img src="assets/images/offer-img/4.png" alt="Images">
                                 </div>
                             </div>
@@ -370,7 +370,7 @@
                                     <img src="assets/images/offer-img/7.png" alt="Images">
                                     <div class="line"></div>
                                     <h3>Pie Collection</h3>
-                                    <a href="#" class="shop-btn">Shop Now</a>
+                                    <a href="shop-grid.html" class="shop-btn">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -380,7 +380,7 @@
                         <div class="offer-style-item-4">
                             <div class="line"></div>
                             <h3>Cakes Collection</h3>
-                            <a href="#" class="shop-btn">Shop Now</a>
+                            <a href="shop-grid.html" class="shop-btn">Shop Now</a>
                             <img src="assets/images/offer-img/blog-2.png" alt="Images">
                         </div>
                     </div>
@@ -968,7 +968,7 @@
                                 <h3>Services</h3>
                                 <ul class="footer-list">
                                     <li>
-                                        <a href="wordpress-hosting.html" target="_blank">
+                                        <a href="my-account.html" target="_blank">
                                             My Account
                                         </a>
                                     </li> 
